--- a/src/templates/country-card.hbs
+++ b/src/templates/country-card.hbs
@@ -1,4 +1,8 @@
-<h2><img src="{{flags.svg}}" alt="{{name.offitial}}"><span>{{name.offitial}}</span></h2>
+
+
+<div><img src="{{flags.svg}}" alt="{{name.official}}" width="150" height="80"></div>
+<h2>{{name.official}}</h2>
+
 <p>Capital: {{capital}}</p>
 <p>Population: {{population}}</p>
-<p>Languages: {{...languages.values()}}</p>
+<p>Languages: {{languages.spa}}</p>
