--- a/src/templates/country-list.hbs
+++ b/src/templates/country-list.hbs
@@ -1,4 +1,4 @@
 <li>
-    <img src="{{flags.svg}}" alt="{{name.offitial}}">
-    <span>{{name.offitial}}</span>
+    <img src="{{flags.svg}}" alt="{{name.official}}" width="70" height="40">
+    <span>{{name.official}}</span>
 </li>
